--- a/me/build.gradle
+++ b/me/build.gradle
@@ -15,8 +15,8 @@ dependencies {
     testCompile 'com.typesafe.akka:akka-testkit_2.12:2.5.23'
     testCompile 'com.typesafe.akka:akka-slf4j_2.12:2.5.23'
 
-    //implementation 'org.slf4j:slf4j-api:1.7.25'
-    //implementation 'org.slf4j:slf4j-log4j12:1.7.25'
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'org.slf4j:slf4j-log4j12:1.7.25'
     //implementation 'com.opencsv:opencsv:4.6'
     //implementation 'javax.annotation:javax.annotation-api:1.3.2'
     
